--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "axios": "^1.6.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
